pegasus/src/Pegasus/Compiler/tests/invalidMOF/badClassDefinition1.mof
/* Class definition with invalidQualifier

Qualifier Static : boolean = false, 
    Scope(property, method), 
    Flavor(DisableOverride, ToSubclass);

class badClassDefinition1
{
    [key, badQualifierName]
    string VolumeName;

    [Static(true)]
    uint32 MyMethod();
};
